--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "express": "^5.1.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.0",
-    "nodemon": "^3.1.10"
+    "multer": "^1.4.5-lts.2",
+    "nodemon": "^3.1.10",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^5.2.133"
   }
 }
