--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.0",
     "multer": "^1.4.5-lts.2",
+    "natural": "^8.0.1",
     "nodemon": "^3.1.10",
     "pdf-parse": "^1.1.1",
-    "pdfjs-dist": "^5.2.133"
+    "pdfjs-dist": "^5.2.133",
+    "stopword": "^3.1.4"
   }
 }
