--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -23,6 +24,7 @@
     "nodemon": "^3.1.10",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^5.2.133",
+    "puppeteer": "^24.9.0",
     "stopword": "^3.1.4"
   }
 }
