--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "brain.js": "^1.4.10",
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
