--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "brain.js": "^1.4.10",
     "cheerio": "^1.0.0",
+    "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
@@ -27,6 +28,7 @@
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^5.2.133",
     "puppeteer": "^24.9.0",
-    "stopword": "^3.1.4"
+    "stopword": "^3.1.4",
+    "streamifier": "^0.1.1"
   }
 }
