--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "brain.js": "^1.4.10",
     "cheerio": "^1.0.0",
     "cloudinary": "^2.6.1",
