--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
     "nodemon": "^3.1.10",
     "pdf-parse": "^1.1.1",
     "puppeteer": "^24.9.0",
-    "stopword": "^3.1.4",
+    "stopword": "^3.1.4"
   }
 }
